--- a/style.css
+++ b/style.css
@@ -393,6 +393,7 @@ footer p{
         padding: 30px;
         background-color: cyan;
         z-index: 10;
+        position: none;
         gap: 5px;
     }
     
@@ -536,7 +537,7 @@ footer p{
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        padding-top: 80px;
+        padding-top: 20px;
     }
     
     #product h1{
