--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ header nav{
     gap: 40px;
 }
 
+header nav a img{
+    display: none;
+}
+
 header nav a{
     text-decoration: none;
     color: black;
@@ -64,6 +68,10 @@ header button{
 header button:hover{
     background-color: orange;
     border: 1px solid orange;
+}
+
+.menu{
+    display: none;
 }
 
 main{
@@ -358,11 +366,17 @@ footer p{
 }
 
 .social{
-    width: 50%;
+    width: 15%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 10px;
+}
+
+footer h1{
+    font-size: 18px;
+    font-weight: 500;
+    color: black;
 }
 
 .social img{
@@ -387,14 +401,14 @@ footer p{
         width: 100%;
         height: 70px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         padding: 30px;
         background-color: cyan;
         z-index: 10;
         position: none;
         gap: 5px;
+        padding: 10px;
     }
     
     header h3{
@@ -403,18 +417,46 @@ footer p{
     }
     
     header nav{
+        position: absolute;
         width: 100%;
+        top: 70px;
+        left: -100%;
+        min-height: 50px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         gap: 14px;
         font-size: 13px;
+        background-color: orange;
+        padding: 20px;
+        transition: 0.5s ease;
+    }
+
+    .slide{
+        left: 0;
+    }
+
+
+    header nav a img{
+        display: block;
     }
     
     header nav a{
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 10px;
+        font-size: 20px;
         text-decoration: none;
         color: black;
         transition: transform 0.5s ease;
+
+    }
+
+    header nav a span{
+        font-size: 20px;
+        color: white;
     }
     
     header nav a:hover{
@@ -437,13 +479,19 @@ footer p{
         border: 1px solid orange;
     }
     
+    .menu{
+        display: flex;
+    }
+
     main{
         width: 100%;
-        min-height: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+        position: relative;
+
     }
     
     #banner-section{
@@ -456,6 +504,7 @@ footer p{
         background-color: whitesmoke;
         padding: 20px ;
         gap: 45px;
+        margin-top: 20px;
     
     }
     
@@ -588,6 +637,7 @@ footer p{
         justify-content: flex-start;
         align-items: center;
         padding-top: 80px;
+        margin-top: 120px;
     }
     
     #place-order h1{
@@ -676,12 +726,13 @@ footer p{
     
     #contact-section{
       width: 100%;
-      min-height: 100%;
+      height: 50%;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      padding-top: 80px;
+      padding-top: 10px;
+      margin-top: 130px;
     }
     
     #contact-section h1{
@@ -691,18 +742,17 @@ footer p{
     
     .contact-container{
         width: 100%;
-        height: 100vh;
+        height: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: white;
         padding: 50px;
-        gap: 100px;
+        gap: 20px;
     }
     
     .contact-left{
-        width: 90%;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -715,12 +765,12 @@ footer p{
     }
     
     .contact-right{
-        width: 90%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
-        gap: 70px;
+        gap: 30px;
         background-color: whitesmoke;
         padding: 30px;
         border-radius: 10px;
@@ -733,14 +783,14 @@ footer p{
     
     footer{
         width: 100%;
-        height: 50px;
+        height: 100px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         padding: 20px;
         background-color: cyan;
-        margin-top: 40px;
+        margin-top: 10px;
     }
     
     footer p{
